bynkc/tests/fixtures/positive/27_let_with_question/input.karn
commons test {
  type Reps = Int where InRange(1, 100)

  fn extract(n: Int) -> Result[Reps, ValidationError] {
    let r: Reps = Reps.of(n)?
    Ok(r)
  }
}
