bynkc/tests/fixtures/negative/19_question_outside_result_fn/input.karn
commons test {
  type Reps = Int where InRange(1, 100)

  fn f(n: Int) -> Int {
    let r = Reps.of(n)?
    r
  }
}
